<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2weather"
    tools:context=".MScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="109dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weathaicon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/Heading1"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="42dp"
        android:text="@string/WeathaCon"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ClearButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/WeatherConInput"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Conditions"
        app:layout_constraintTop_toBottomOf="@+id/MaxTempInput" />

    <EditText
        android:id="@+id/MaxTempInput"
        android:layout_width="138dp"
        android:layout_height="55dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MaxTemp"
        app:layout_constraintTop_toBottomOf="@+id/MinTempInput" />

    <EditText
        android:id="@+id/WeekDayInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/MinTempInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvgButton" />

    <TextView
        android:id="@+id/WeekDay"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/WeekDay"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/MinTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/MaxTemp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Conditions"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/MinTemp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/MaxTemp"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/MinTempInput"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeekDayInput" />

    <Button
        android:id="@+id/Detailsbutton"
        android:layout_width="180dp"
        android:layout_height="63dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Details"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Exit2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClearButton" />

    <Button
        android:id="@+id/Exit2"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Detailsbutton"
        app:layout_constraintTop_toBottomOf="@+id/ClearButton" />

    <Button
        android:id="@+id/AvgButton"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="43dp"
        android:text="@string/Average"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/Clear"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AddButton"
        app:layout_constraintTop_toBottomOf="@+id/WeatherConInput" />

    <TextView
        android:id="@+id/AvgOutput"
        android:layout_width="112dp"
        android:layout_height="47dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="54dp"
        android:background="#9F6F09FB"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="143dp"
        android:layout_height="63dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/AddData"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ClearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Conditions" />
</androidx.constraintlayout.widget.ConstraintLayout>